// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform options > disable all 1`] = `
{
  "code": "console.log('hello javascript')",
  "map": SourceMap {
    "file": "main.js",
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "main.js",
    ],
    "sourcesContent": [
      "console.log('hello javascript')",
    ],
    "version": 3,
  },
}
`;

exports[`transform options > disable highlight 1`] = `
{
  "code": "console.log("%c🔦 http://localhost:3070#fgsss,1,1","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')",
  "map": SourceMap {
    "file": "main.js",
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,iIAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "main.js",
    ],
    "sourcesContent": [
      "console.log('hello javascript')",
    ],
    "version": 3,
  },
}
`;

exports[`transform options > disable launch editor 1`] = `
{
  "code": "console.log("%c🚀 main.js·1","padding:2px 5px;border-radius:3px 0 0 3px;margin:0 0 5px 0;color:#fff;background:#4FC08D;","\\n",'hello javascript')",
  "map": SourceMap {
    "file": "main.js",
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,mHAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "main.js",
    ],
    "sourcesContent": [
      "console.log('hello javascript')",
    ],
    "version": 3,
  },
}
`;

exports[`transform options > empty option 1`] = `
{
  "code": "console.log("%c🚀 main.js·1%c🔦 http://localhost:3070#fgsss,1,1","padding:2px 5px;border-radius:3px 0 0 3px;margin:0 0 5px 0;color:#fff;background:#4FC08D;","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')",
  "map": SourceMap {
    "file": "main.js",
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,2OAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "main.js",
    ],
    "sourcesContent": [
      "console.log('hello javascript')",
    ],
    "version": 3,
  },
}
`;

exports[`transform options > extended path option 1`] = `
{
  "code": "console.log("%c🚀 runner/index.js·1%c🔦 http://localhost:3070#sfgha,1,1","padding:2px 5px;border-radius:3px 0 0 3px;margin:0 0 5px 0;color:#fff;background:#4FC08D;","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')",
  "map": SourceMap {
    "file": "index.js",
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,mPAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC",
    "names": [],
    "sources": [
      "index.js",
    ],
    "sourcesContent": [
      "console.log('hello javascript')",
    ],
    "version": 3,
  },
}
`;

exports[`transform options > with prefix suffix 1`] = `
{
  "code": "console.log("-------\\n%c🚀 main.js·1%c🔦 http://localhost:3070#fgsss,1,1","padding:2px 5px;border-radius:3px 0 0 3px;margin:0 0 5px 0;color:#fff;background:#4FC08D;","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript',"\\n-------")",
  "map": SourceMap {
    "file": "main.js",
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,oPAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,aAAC",
    "names": [],
    "sources": [
      "main.js",
    ],
    "sourcesContent": [
      "console.log('hello javascript')",
    ],
    "version": 3,
  },
}
`;
